src/objects/Apttus_Proposal_Proposal_c__x.object
<CustomObject>
    <fields>
        <fullName>APTS_China_India_Hidalgo_Dasa_in_Stud__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_China_India_Hidalgo_Dasa_in_Study__c</externalDeveloperName>
        <label>China, India, Hidalgo or Dasa in Study?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_China_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_China_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for China Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>China Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_China_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_China_Region_Name__c</externalDeveloperName>
        <label>China Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_China_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_China_TotalSites__c</externalDeveloperName>
        <label>China TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_China_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_China_Total_Count__c</externalDeveloperName>
        <label>China Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_China_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_China_Total_Patient_Visits__c</externalDeveloperName>
        <label>China Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_China_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_China_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for China Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>China Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cloned_From_Awarded_Proposal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Cloned_From_Awarded_Proposal__c</externalDeveloperName>
        <inlineHelpText>Set to true if proposal is cloned from Study Awarded Proposal</inlineHelpText>
        <label>Cloned From Awarded Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Close_Date_c__c</fullName>
        <externalDeveloperName>APTS_Close_Date__c</externalDeveloperName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_CohortStudy_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_CohortStudy__c</externalDeveloperName>
        <label>Cohort Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Combo_Outbound_Shipping_Containe__c</fullName>
        <externalDeveloperName>APTS_Combo_Outbound_Shipping_Containers__c</externalDeveloperName>
        <label>Combo Outbound Shipping Containers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Combo_Shipping_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Combo_Shipping__c</externalDeveloperName>
        <label>Combo Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Companion_Diagnostic_c__c</fullName>
        <externalDeveloperName>APTS_Companion_Diagnostic__c</externalDeveloperName>
        <label>Companion Diagnostic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Companion_Dx_IVD_Study_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Companion_Dx_IVD_Study__c</externalDeveloperName>
        <label>Companion Dx Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Competitive_Bid_c__c</fullName>
        <externalDeveloperName>APTS_Competitive_Bid__c</externalDeveloperName>
        <label>Competitive Bid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Complexity_Factor_c__c</fullName>
        <externalDeveloperName>APTS_Complexity_Factor__c</externalDeveloperName>
        <label>Setup Complexity Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Complexity_Factor_for_PM_Monitor__c</fullName>
        <externalDeveloperName>APTS_Complexity_Factor_for_PM_Monitoring__c</externalDeveloperName>
        <label>Complexity Factor for PM Monitoring</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Study_Contract_Pricing__c</fullName>
        <externalDeveloperName>APTS_Configure_Study_Contract_Pricing__c</externalDeveloperName>
        <label>Configure Study (Contract Pricing)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Study_c__c</fullName>
        <externalDeveloperName>APTS_Configure_Study__c</externalDeveloperName>
        <label>Select Services</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Executed_c__c</fullName>
        <externalDeveloperName>APTS_Contract_Executed__c</externalDeveloperName>
        <label>Contract Executed</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Number_c__c</fullName>
        <externalDeveloperName>APTS_Contract_Number__c</externalDeveloperName>
        <label>Contract Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Protocol_No_c__c</fullName>
        <externalDeveloperName>APTS_Contract_Protocol_No__c</externalDeveloperName>
        <label>Contract Protocol No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_c__c</fullName>
        <externalDeveloperName>APTS_Contract__c</externalDeveloperName>
        <label>Contract</label>
        <length>18</length>
        <referenceTo>Contract__x</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_c__c</fullName>
        <externalDeveloperName>APTS_Cost__c</externalDeveloperName>
        <label>Cost (Excluding Logistics)</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_CurrencyLockedExchangeRate_c__c</fullName>
        <externalDeveloperName>APTS_CurrencyLockedExchangeRate__c</externalDeveloperName>
        <label>CurrencyLockedExchangeRate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Currency_Rate__c</externalDeveloperName>
        <label>USD to Totals Currency Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Current_Margin_c__c</fullName>
        <externalDeveloperName>APTS_Current_Margin__c</externalDeveloperName>
        <inlineHelpText>Need APTTUS to configure the fields to populate the values.</inlineHelpText>
        <label>Current Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_DASA_Discount_c__c</fullName>
        <externalDeveloperName>APTS_DASA_Discount__c</externalDeveloperName>
        <label>DASA Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_DM_Complexity_Factor_c__c</fullName>
        <externalDeveloperName>APTS_DM_Complexity_Factor__c</externalDeveloperName>
        <inlineHelpText>Values are estimated and based on tests selected in Shopping Cart, actual values may vary</inlineHelpText>
        <label>Complexity Factor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>High Complexity</fullName>
                </value>
                <value>
                    <fullName>Low Complexity</fullName>
                </value>
                <value>
                    <fullName>Medium/High Complexity</fullName>
                </value>
                <value>
                    <fullName>Medium Complexity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_DM_Set_Up_Hours_c__c</fullName>
        <externalDeveloperName>APTS_DM_Set_Up_Hours__c</externalDeveloperName>
        <inlineHelpText>Values are estimated and based on tests selected in Shopping Cart, actual values may vary</inlineHelpText>
        <label>Set-Up Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Date_Required_c__c</fullName>
        <externalDeveloperName>APTS_Date_Required__c</externalDeveloperName>
        <inlineHelpText>Refers to contract--MAS to check with Sharon on this field field and message.</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Date_Submitted_c__c</fullName>
        <externalDeveloperName>APTS_Date_Submitted__c</externalDeveloperName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Deactivate_Proposal_c__c</fullName>
        <externalDeveloperName>APTS_Deactivate_Proposal__c</externalDeveloperName>
        <inlineHelpText>Deactivate button is available on Active and Non-Primary budgets.</inlineHelpText>
        <label>Deactivate Proposal</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Default_Batch_Size_c__c</fullName>
        <externalDeveloperName>APTS_Default_Batch_Size__c</externalDeveloperName>
        <inlineHelpText>Batched Inbound Shipping.  The number of shipments per site.  The value entered will be the default value shown for each country selected.  Total Batched shipments will be # Shipments/site * # sites for Frozen samples.</inlineHelpText>
        <label>Number of Batch Shipments/Site</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Direct_Margin2_c__c</fullName>
        <externalDeveloperName>APTS_Direct_Margin2__c</externalDeveloperName>
        <label>Direct Margin %</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Direct_Margin_c__c</fullName>
        <externalDeveloperName>APTS_Direct_Margin__c</externalDeveloperName>
        <label>Direct Margin % (OLD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>&lt;35%</fullName>
                </value>
                <value>
                    <fullName>&gt; 35% and &lt;45%</fullName>
                </value>
                <value>
                    <fullName>&gt; 45%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Director_of_Finance_CT_IO_c__c</fullName>
        <externalDeveloperName>APTS_Director_of_Finance_CT_IO__c</externalDeveloperName>
        <label>Director of Finance CT &amp; IO</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Disable_Price_Lockdown_c__c</fullName>
        <externalDeveloperName>APTS_Disable_Price_Lockdown__c</externalDeveloperName>
        <label>Disable Price Lockdown</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_c__c</fullName>
        <externalDeveloperName>APTS_Discount__c</externalDeveloperName>
        <label>Discount %</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>&lt;22%</fullName>
                </value>
                <value>
                    <fullName>&gt;=32%</fullName>
                </value>
                <value>
                    <fullName>&gt;22% and &lt;32%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Dry_Ice_Outbound_Shipping_Contai__c</fullName>
        <externalDeveloperName>APTS_Dry_Ice_Outbound_Shipping_Container__c</externalDeveloperName>
        <label>Dry Ice Outbound Shipping Containers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Due_Date_To_Client_c__c</fullName>
        <externalDeveloperName>APTS_Due_Date_To_Client__c</externalDeveloperName>
        <label>Proposal Due Date To Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_EMEA_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_EMEA_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for EMEA Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>EMEA Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_EMEA_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_EMEA_TotalSites__c</externalDeveloperName>
        <label>EMEA TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_EMEA_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_EMEA_Total_Patient_Visits__c</externalDeveloperName>
        <label>EMEA Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_EMEA_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_EMEA_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for EMEA Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>EMEA Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_EU_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_EU_Conversion_Rate__c</externalDeveloperName>
        <label>EMEA Conversion Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_EU_Currency2_c__c</fullName>
        <externalDeveloperName>APTS_EU_Currency2__c</externalDeveloperName>
        <label>EMEA Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_EU_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_EU_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_EU_Currency_c__c</fullName>
        <externalDeveloperName>APTS_EU_Currency__c</externalDeveloperName>
        <label>EU Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_EU_Discount_c__c</fullName>
        <externalDeveloperName>APTS_EU_Discount__c</externalDeveloperName>
        <label>EMEA Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_EU_First_Patient_In_Date_c__c</fullName>
        <externalDeveloperName>APTS_EU_First_Patient_In_Date__c</externalDeveloperName>
        <label>EU First Patient In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_EU_Project_Leader_c__c</fullName>
        <externalDeveloperName>APTS_EU_Project_Leader__c</externalDeveloperName>
        <label>EU Project Leader</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Enhanced_Monitoring_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Enhanced_Monitoring_Required__c</externalDeveloperName>
        <label>APTS Enhanced Monitoring Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Client_Response_Date_c__c</fullName>
        <externalDeveloperName>APTS_Estimated_Client_Response_Date__c</externalDeveloperName>
        <label>Estimated Client Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Enrollment_Period_Mont__c</fullName>
        <externalDeveloperName>APTS_Estimated_Enrollment_Period_Months__c</externalDeveloperName>
        <label>Estimated Enrollment Period (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Number_of_Patients_Enr__c</fullName>
        <externalDeveloperName>APTS_Estimated_Number_of_Patients_Enrol__c</externalDeveloperName>
        <label>Estimated Number of Patients Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Screening_Period_Month__c</fullName>
        <externalDeveloperName>APTS_Estimated_Screening_Period_Months__c</externalDeveloperName>
        <label>Estimated Screening Period (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Study_Length_Months_c__c</fullName>
        <externalDeveloperName>APTS_Estimated_Study_Length_Months__c</externalDeveloperName>
        <inlineHelpText>(Include storage length timeframe)</inlineHelpText>
        <label>Estimated Study Length  (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Estm_Patients_Screened_c__c</fullName>
        <externalDeveloperName>APTS_Estm_Patients_Screened__c</externalDeveloperName>
        <label>Estimated Number of Patients Screened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Europe_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_Europe_Region_Name__c</externalDeveloperName>
        <label>EMEA Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Europe_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_Europe_Total_Count__c</externalDeveloperName>
        <label>Europe Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ExchangeRateChanged_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_ExchangeRateChanged__c</externalDeveloperName>
        <label>ExchangeRateChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Exchange_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Exchange_Rate__c</externalDeveloperName>
        <inlineHelpText>USD to rate card exchange rate</inlineHelpText>
        <label>Rate card exchange rate</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ExecutionStatus_c__c</fullName>
        <externalDeveloperName>APTS_ExecutionStatus__c</externalDeveloperName>
        <label>Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloned</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Executive_Sales_Director_c__c</fullName>
        <externalDeveloperName>APTS_Executive_Sales_Director__c</externalDeveloperName>
        <label>Executive Sales Director</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Expedited_Setup_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Expedited_Setup__c</externalDeveloperName>
        <label>Expedited Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Export_Blood_Sample_Volume_c__c</fullName>
        <externalDeveloperName>APTS_Export_Blood_Sample_Volume__c</externalDeveloperName>
        <label>Export Blood Sample Volume</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Export_Blood_Volume_Calculation__c</fullName>
        <externalDeveloperName>APTS_Export_Blood_Volume_Calculation__c</externalDeveloperName>
        <label>Export Blood Volume Calculation</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Export_Proposal_c__c</fullName>
        <externalDeveloperName>APTS_Export_Proposal__c</externalDeveloperName>
        <label>Export Proposal</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Extreme_Weather_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Extreme_Weather__c</externalDeveloperName>
        <label>Extreme Weather</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Fax_Reporting_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Fax_Reporting_Required__c</externalDeveloperName>
        <inlineHelpText>To initiate Fax reporting calculations</inlineHelpText>
        <label>Fax Reporting Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Type_c__c</fullName>
        <externalDeveloperName>APTS_Fee_Type__c</externalDeveloperName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Per Visit Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Fix_PAVs_for_Cloned_Proposal_c__c</fullName>
        <externalDeveloperName>APTS_Fix_PAVs_for_Cloned_Proposal__c</externalDeveloperName>
        <label>Fix Cloned Proposal</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Currency_Contracts_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Fixed_Currency_Contracts__c</externalDeveloperName>
        <label>Fixed Currency Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Format_Type_c__c</fullName>
        <externalDeveloperName>APTS_Format_Type__c</externalDeveloperName>
        <label>Format Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Custom Flat File</fullName>
                </value>
                <value>
                    <fullName>Hierarchical, Crosstab</fullName>
                </value>
                <value>
                    <fullName>Standard Flat File, CDISC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Frequency_c__c</fullName>
        <externalDeveloperName>APTS_Frequency__c</externalDeveloperName>
        <label>Data Transfer Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_GSK_Competitive_Bid_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_GSK_Competitive_Bid__c</externalDeveloperName>
        <label>GSK Competitive Bid</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Generate_Bid_Grid_c__c</fullName>
        <externalDeveloperName>APTS_Generate_Bid_Grid__c</externalDeveloperName>
        <label>Generate Bid Grid</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Generate_RFTS_Form_c__c</fullName>
        <externalDeveloperName>APTS_Generate_RFTS_Form__c</externalDeveloperName>
        <label>Generate RFTS Form</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Clinical_Trials_Controlle__c</fullName>
        <externalDeveloperName>APTS_Global_Clinical_Trials_Controller__c</externalDeveloperName>
        <label>Global Clinical Trials Controller</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Setup_Fee_c__c</fullName>
        <externalDeveloperName>APTS_Global_Setup_Fee__c</externalDeveloperName>
        <label>Global Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Tier_2_Percentage_c__c</fullName>
        <externalDeveloperName>APTS_Global_Tier_2_Percentage__c</externalDeveloperName>
        <inlineHelpText>Global Tier 2 percent used on Mange Countries page(if any)</inlineHelpText>
        <label>Global Tier 2 Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Tier_3_Percentage_c__c</fullName>
        <externalDeveloperName>APTS_Global_Tier_3_Percentage__c</externalDeveloperName>
        <inlineHelpText>Global Tier 3 percentage on a proposal(if any)</inlineHelpText>
        <label>Global Tier 3 Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Grand_Total_New_c__c</fullName>
        <externalDeveloperName>APTS_Grand_Total_New__c</externalDeveloperName>
        <label>Grand Total (New)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Hidalgo_Discount_c__c</fullName>
        <externalDeveloperName>APTS_Hidalgo_Discount__c</externalDeveloperName>
        <label>Hidalgo Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Inbound_Logistics_Overage_c__c</fullName>
        <externalDeveloperName>APTS_Inbound_Logistics_Overage__c</externalDeveloperName>
        <inlineHelpText>Inbound Logistics Overage % value.</inlineHelpText>
        <label>Inbound Logistics Overage %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Include_Inflation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Include_Inflation__c</externalDeveloperName>
        <inlineHelpText>Inflation is included by default. To exclude inflation, de-select this checkbox.</inlineHelpText>
        <label>Include Price Inflation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Include_Rate_Card_Inflation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Include_Rate_Card_Inflation__c</externalDeveloperName>
        <inlineHelpText>This will indicate if the Proposal should be considered for Lumpsum RateCard Inflation.</inlineHelpText>
        <label>Include Rate Card Inflation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Includes_Inbound_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Includes_Inbound__c</externalDeveloperName>
        <label>Includes Inbound ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Includes_Supplies_Outbound_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Includes_Supplies_Outbound__c</externalDeveloperName>
        <label>Includes Supplies &amp; Outbound ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_in_Total_Sites_for_Setu__c</fullName>
        <externalDeveloperName>APTS_Increase_in_Total_Sites_for_SetupPM__c</externalDeveloperName>
        <inlineHelpText>This field will display the increase in the total number of sites for Setup and PM.</inlineHelpText>
        <label>Increase in Total Sites for Setup/PM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_India_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_India_Conversion_Rate__c</externalDeveloperName>
        <label>India Conversion Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_India_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_India_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
</CustomObject>